--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Holographic card</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel='stylesheet' href='https://codepen.io/simeydotme/pen/WNawZXp/be618208e9e17abe52c0fc63379e5f88.css'>
 <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;600;800&amp;display=swap'><link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./style2.css">
+
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+<!-- Background text -->
 <h1>Hey, I am Rahul.</h1>
 
 <main id="app">
@@ -39,9 +40,9 @@
             <aside class="divider">
                 <div class="username">
                     <img class="profile" src="./Rahul.jpeg">
-                    <span contenteditable spellcheck=false>Rahul Vadlani</span> <img class="verified" src="https://assets.codepen.io/13471/verified.png">
+                    <span contenteditable spellcheck=false>Rahul Vadlani</span> <img class="verified" src="./verified.png">
                 </div>
-                <span class="usernum" contenteditable spellcheck=false>180249081</span>
+                <span class="usernum" contenteditable spellcheck=false>101.029.882</span>
             </aside>
         </section>
 
@@ -55,6 +56,7 @@
 
 
 
+Links to various platforms
 
 
 
@@ -62,10 +64,9 @@
 
 
 
-
-    social icons
+    
 -->
-<a class="social-icon codepen" href="https://github.com/itzcloudycuz/Bigrepository" title="Mt GitHub Repos">
+<a class="social-icon git" href="https://github.com/itzcloudycuz/Bigrepository" title="Mt GitHub Repos">
     Crafted by Rahul
 </a>
 
@@ -81,7 +82,7 @@
         <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
     </svg>
 </a>
-<!-- partial -->
+<!-- gsap links -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js'></script><script  src="./script.js"></script>
 
 </body>
